--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -19,7 +19,7 @@
     </div>
     {% endif %}
 
-    <div>
+    <div class="bg-ib-white">
       <strong>Menu:</strong>
       <ul>
         {% if user.is_authenticated %}
