--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,14 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <div class="container-fluid bg-ib-white text-ib-dark px-md-4 pt-4 pb-5 py-md-5 font-body">
+        <div class="row">
+            <div class="col-12 col-sm-10 offset-sm-1 col-lg-8 offset-lg-2">
+                <div class="allauth-form-inner-content">
+                    {% block inner_content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
