--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -6,25 +6,31 @@
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+{% block inner_content %}
+<!-- Page Title -->
+<h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2 text-center">{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
 
 {% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+<!-- Intro text -->
+<p class="text-ib-dark text-center">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}" class="weight-semibold text-blue text-decoration-none text-link-blue">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
+<!-- Form -->
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase">{% trans 'Confirm' %}</button>
+    </div>
 </form>
 
 {% else %}
 
 {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+<!-- Intro text -->
+<p class="text-ib-dark text-center">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}" class="weight-semibold text-blue text-decoration-none text-link-blue">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
 {% endif %}
 
