--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -7,10 +7,10 @@
 {% block inner_content %}
 
 <!-- Page Title -->
-<h2 class="font-title weight-bold section-title-lrg text-uppercase mb-2 text-center">{% trans "Sign Out" %}</h2>
+<h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2 text-center">{% trans "Sign Out" %}</h1>
 
-<!-- Intro text & link to signup -->
-<p class="text-dark-grey text-center">{% trans 'Are you sure you want to sign out?' %}</p>
+<!-- Intro text -->
+<p class="text-ib-dark text-center">{% trans 'Are you sure you want to sign out?' %}</p>
 
 <!-- Form -->
 <form method="post" action="{% url 'account_logout' %}">
@@ -19,6 +19,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
 
+  <!-- Button -->
   <div class="d-flex justify-content-center">
     <button type="submit" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase">{% trans 'Sign Out' %}</button>
   </div>
