--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -2,23 +2,36 @@
 
 {% load i18n %}
 {% load account %}
+{% load widget_tweaks %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <!-- Page Title -->
+    <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <!-- Intro text -->
+    <p class="text-ib-dark mb-4">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
+    <!-- Form -->
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <!-- Form Inputs -->
+        {{ form.email|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+
+        <div class="button-group mt-4 d-flex justify-content-end">
+            <!-- Home Button -->
+            <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+              <p class="d-inline">HOME</p>
+            </a>
+            <!-- Submit Button -->
+            <button class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit" value="{% trans 'RESET PASSWORD' %}">{% trans "Submit" %}</button>
+        </div>
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="mt-4 text-center">{% blocktrans %}Please <a href="" class=" text-blue weight-semibold text-decoration-none text-link-blue">contact us</a> if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
