--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,23 +1,40 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load widget_tweaks %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block inner_content %}
+    <!-- Page Title -->
+    <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <!-- Intro text -->
+        <p class="text-ib-dark">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
+            <!-- Form -->
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+
+                <!-- Form Inputs -->
+                {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+                {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+
+                <div class="button-group mt-4 d-flex justify-content-end">
+                    <!-- Home Button -->
+                    <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+                      <p class="d-inline">HOME</p>
+                    </a>
+                    <!-- Submit Button -->
+                    <button name="action" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit" value="{% trans 'change password' %}">{% trans "Submit" %}</button>
+                </div>
+                
             </form>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            <p class="text-ib-dark">{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
 {% endblock %}
