--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block inner_content %}
+    <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Change Password" %}</h1>
+    <p class="text-ib-dark">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
