--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,36 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load widget_tweaks %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block inner_content %}
 
+    <!-- Page Title -->
+    <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Set Password" %}</h1>
+
+    <!-- Intro text -->
+    <p class="text-ib-dark mb-4">{% trans "Fill in the form below to set a password." %}</p>
+
+    <hr class="mt-4 mb-5 mb-sm-4">
+
+    <!-- Form -->
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <!-- Form Inputs -->
+        {{ form.password|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
+
+        <div class="button-group mt-4 d-flex justify-content-end">
+            <!-- Home Button -->
+            <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+              <p class="d-inline">HOME</p>
+            </a>
+            <!-- Submit Button -->
+            <button name="action" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit" value="{% trans 'Set Password' %}">{% trans "Submit" %}</button>
+        </div>
+
         <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
