--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,8 +4,8 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+{% block inner_content %}
+<h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Sign Up Closed" %}</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p class="text-ib-dark mb-4>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
